<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:paddingVertical="30dp"
    tools:context=".ui.plant.PlantNewActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/bg_icon_circle"
            android:contentDescription="@string/back_button"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_arrow_back_ios_new"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_plant_status"
            style="@style/TextStyle.Regular.ExtraLarge.DarkGray"
            android:layout_marginTop="100dp"
            android:text="@string/healthy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back" />

        <TextView
            android:id="@+id/tv_plant_name"
            style="@style/TextStyle.Regular.Large.Black"
            android:text="@string/strawberry"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_plant_status" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_card_border"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="30dp">

            <TextView
                android:id="@+id/tv_soil_moisture_percentage"
                style="@style/TextStyle.Regular.ExtraLarge.Black"
                android:text="@string/percentage"
                android:textSize="42sp" />

            <TextView
                style="@style/TextStyle.Regular.Medium.Black"
                android:text="@string/moisture" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_humidity_percentage"
                style="@style/TextStyle.Regular.ExtraLarge.Black"
                android:text="@string/percentage"
                android:textSize="42sp" />

            <TextView
                style="@style/TextStyle.Regular.Medium.Black"
                android:text="@string/humidity" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_sunlight_percentage"
                style="@style/TextStyle.Regular.ExtraLarge.Black"
                android:text="@string/percentage"
                android:textSize="42sp" />

            <TextView
                style="@style/TextStyle.Regular.Medium.Black"
                android:text="@string/sunlight" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_temperature"
                style="@style/TextStyle.Regular.ExtraLarge.Black"
                android:text="@string/_18"
                android:textSize="42sp" />

            <TextView
                style="@style/TextStyle.Regular.Medium.Black"
                android:text="@string/temperature" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_plant_image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/strawberry_low"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/SpecificCornerRounded" />
</LinearLayout>