<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:paddingVertical="30dp"
    tools:context=".ui.onboarding.screens.FirstScreenFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:contentDescription="@string/app_icon"
        android:src="@drawable/logo_option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textView2"
            style="@style/TextStyle.Regular.Medium.Black"
            android:layout_width="264dp"
            android:text="@string/second_onboarding_title"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextStyle.Regular.ExtraSmall.DarkGray"
            android:layout_width="200dp"
            android:layout_marginTop="22dp"
            android:text="@string/you_will_have_experience_in_caring_for_plants_comfortably_without_having_to_worry_about_forgetting_your_plants"
            android:textAlignment="center" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/turquoiseGreen"
        android:paddingHorizontal="40dp"
        android:paddingVertical="16dp"
        android:text="@string/get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>