<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="22dp"
    android:paddingVertical="30dp"
    tools:context=".ui.plant.PlantActivity">

    <TextView
        android:id="@+id/tv_back"
        style="@style/TextStyle.Regular.Small.Black"
        android:drawablePadding="6dp"
        android:text="@string/back"
        app:drawableStartCompat="@drawable/ic_arrow_back_ios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_marginHorizontal="34dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_image"
        app:civ_border_color="@color/turquoiseGreen"
        app:civ_border_width="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_back" />

    <LinearLayout
        android:id="@+id/strawberry_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="34dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
        app:layout_constraintStart_toStartOf="@+id/circleImageView"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_plant_name"
                style="@style/TextStyle.Regular.Medium.Black"
                android:text="@string/strawberry" />

            <TextView
                android:id="@+id/tv_plant_status"
                style="@style/TextStyle.Bold.Small.Black"
                android:layout_marginTop="10dp"
                android:text="@string/healthy"
                android:textColor="@color/turquoiseGreen" />
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_more_vert" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sunlight_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingVertical="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strawberry_layout">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_circle_icon"
            android:backgroundTint="@color/lightPeach"
            android:contentDescription="@string/sunlight"
            android:padding="8dp"
            android:src="@drawable/ic_sunny"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strawberry_layout"
            app:tint="@color/brightYellow" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle.Bold.Large.Black"
                android:text="@string/percentage"
                android:textColor="@color/brightYellow" />

            <TextView
                style="@style/TextStyle.Regular.Medium.Black"
                android:text="@string/sunlight"
                android:textColor="@color/brightYellow" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/temperature_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/sunlight_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sunlight_section">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_circle_icon"
            android:backgroundTint="@color/pinkBlush"
            android:contentDescription="@string/temperature"
            android:padding="8dp"
            android:src="@drawable/ic_device_thermostat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strawberry_layout"
            app:tint="@color/hotPink" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle.Bold.Large.Black"
                android:text="@string/_18"
                android:textColor="@color/hotPink" />

            <TextView
                style="@style/TextStyle.Regular.Medium.Black"
                android:text="@string/temperature"
                android:textColor="@color/hotPink" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/moisture_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingVertical="14dp"
        app:layout_constraintEnd_toEndOf="@+id/sunlight_section"
        app:layout_constraintStart_toStartOf="@+id/sunlight_section"
        app:layout_constraintTop_toBottomOf="@+id/sunlight_section">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_circle_icon"
            android:backgroundTint="@color/lightSkyBlue"
            android:contentDescription="@string/moisture"
            android:padding="8dp"
            android:src="@drawable/ic_water_drop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strawberry_layout"
            app:tint="@color/brightBlue" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle.Bold.Large.Black"
                android:text="@string/percentage"
                android:textColor="@color/brightBlue" />

            <TextView
                style="@style/TextStyle.Regular.Medium.Black"
                android:text="@string/moisture"
                android:textColor="@color/brightBlue" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/humidity_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingVertical="14dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="@+id/temperature_section"
        app:layout_constraintStart_toStartOf="@+id/temperature_section"
        app:layout_constraintTop_toBottomOf="@+id/temperature_section">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_circle_icon"
            android:backgroundTint="@color/mintGreen"
            android:contentDescription="@string/moisture"
            android:padding="8dp"
            android:src="@drawable/ic_humidity_indoor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strawberry_layout"
            app:tint="@color/tropicalGreen" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle.Bold.Large.Black"
                android:text="@string/percentage"
                android:textColor="@color/tropicalGreen" />

            <TextView
                style="@style/TextStyle.Regular.Medium.Black"
                android:text="@string/humidity"
                android:textColor="@color/tropicalGreen" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>